# gtfs-general

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  docker_run.sh  mypy.ini  pyproject.toml  tox.ini
.docker/development/: docker-compose.yml
.github/workflows/: backend_testing.yaml  backend_testing.yml
gtfs_general/: __init__.py  __main__.py  cli.py  dask_config.py  logging.py
gtfs_general/exceptions/: extractor_exceptions.py
gtfs_general/extractor/: bbox.py  extractor.py  gtfs.py
src/: command.rs  lib.rs
src/common/: file_module.rs  mod.rs  test_utils.rs  unzip_module.rs
src/gtfs/: gtfs.rs  mod.rs
src/gtfs_general/: __init__.py  __main__.py  application.py  config.py  dask_config.py  docs.py  logging.py  main.py
src/gtfs_general/api/api_v1/: api.py
src/gtfs_general/api/api_v1/endpoints/: health.py  login.py
src/gtfs_general/db/: __init__.py  factories.py  gtfs.py  session.py
src/gtfs_general/exceptions/: extractor_exceptions.py  server_exceptions.py
src/gtfs_general/extractor/: extractor.py  gtfs.py  inoutline.py  utils.py
src/gtfs_general/models/: response.py
src/gtfs_general/utils/: enumerations.py
tests/: conftest.py  test_command.rs  test_common.rs  test_extractor.py  test_gtfs.rs
tests/api/api_v1/: test_login.py
tests/api/db/: test_session.py
tests/gtfs_general/: test_main.py
tests/gtfs_general/api/api_v1/: test_api.py  test_health.py  test_login.py
tests/gtfs_general/db/: __init__.py  test_gtfs.py  test_gtfs_agency.py  test_gtfs_calendar.py  test_gtfs_routes.py  test_gtfs_shapes.py  test_gtfs_stop_times.py  test_gtfs_stops.py  test_gtfs_trips.py  test_session.py
tests/gtfs_general/extractor/: test_extractor.py
tests/gtfs_general/models/: test_response.py
utilities/: Cargo.toml
utilities/src/: lib.rs
utilities/src/common/: file_module.rs  filter_module.rs  mod.rs  unzip_module.rs  zip_module.rs
utilities/src/testing/: environment_module.rs  mod.rs  test_utils.rs
utilities/src/types/: gtfs_data_types.rs  mod.rs
utilities/tests/: test_common.rs  test_filter.rs
