[package]
name = "gtfs-general"
version = "0.2.0"
edition = "2021"
authors = ["Julian Psotta <julianpsotta@gmail.com>"]

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
polars = { version = "0.40.0", features = ["lazy", "streaming", "strings", "dtype-date", "timezones", "csv", "is_in"] }
zip = "2.1.3"
env_logger = { version = "0.11.3" }
log = "0.4.20"
tempfile = "3.9.0"
lazy_static = { version = "1.4.0", features = [] }
serde = { version = "1.0.193", features = ["derive"] }
utilities = { path = "utilities", features = ["default"] }

[dev-dependencies]
rstest = "0.18.2"
tempdir = "0.3.7"
grcov = "0.8.19"
pretty_assertions = "1.4.0"
cargo-llvm-cov = "0.6.0"
utilities = { path = "utilities", features = ["testing"] }