[tool.poetry]
name = "gtfs-general"
version = "0.1.0"
description = "A general to command your GTFS data"
authors = ["Julian Psotta <julianpsotta@gmail.com>"]
readme = "README.md"
packages = [{include = "gtfs_general", from = "src"}]

[tool.poetry.scripts]
gtfs-general = "gtfs_general.main:app"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
dask = { extras = ['distributed'], version = "^2022.9.2" }
pandas = "^1.5.0"
typer = {extras = ["all"], version = "^0.6.1"}
rich = "^12.6.0"
types-PyYAML = "^6.0.12"
tqdm = "^4.64.1"
click = "^8.1.3"
click-extra = "^3.2.5"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
gunicorn = "^20.1.0"
fastapi = {version="0.104.1", extras=["all"]}
httpx = "^0.25.2"
pydantic-settings = "^2.1.0"
sqlmodel = { version = "^0.0.14", optional = true }
sqlalchemy = { version = "^2.0.23", optional = true }
geoalchemy2 = { version = "^0.14.3", optional = true }


[tool.poetry.group.dev.dependencies]
pre-commit = "3.6.0"
black = "^22.10.0"
isort = "^5.10.1"
pytest = "^7.1.3"
bokeh = "^2.4.3"
mypy = "^1.7.1"
autoflake = "^2.2.1"
flake8 = "^6.1.0"
tox = "^4.11.4"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"

[tool.poetry.extras]
api = ["sqlalchemy", "sqlmodel"]

[build-system]
requires = ["poetry-core", "poetry>=1.2"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 121
skip_glob = ["**/.env*", "**/.venv*", "**/env/*", "**/.venv/*", "**/docs/*"]

[tool.black]
line-length = 121
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.coverage
  | \.tox
  | \.venv
  | \.env
  | \.venv310
  | \.venv309
  | \.venv308
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
log_cli = true
log_cli_level = 20 # Warnings

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = false
check_untyped_defs = true
no_implicit_reexport = true
no_implicit_optional = false
exclude = '.git,__pycache__,__init__.py,.mypy_cache,.pytest_cache,alembic,.venv,.tox,.idea,.venv310,.env,input,output'

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
